--- a/index.html
+++ b/index.html
@@ -283,12 +283,14 @@
             <option value="ja">Japanese</option>
           </select>
 
-          <h3>Articles</h3>
-          <select id="max-select" class="select">
-            <option value="10">10 articles</option>
-            <option value="20">20 articles</option>
-            <option value="25">25 articles</option>
-          </select>
+         <h3>Articles</h3>
+<select id="max-select" class="select">
+  <option value="10">10 articles</option>
+  <option value="25" selected>25 articles</option>
+  <option value="50">50 articles</option>
+  <option value="100">100 articles</option>
+</select>
+
         </section>
 
         <!-- Bias buttons -->
