--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     .center-bias{background: var(--center-color);} .center-right-bias{background: var(--center-right-color);}
     .right-bias{background: var(--right-color);}
 
-    /* Reliability slider */
+    /* Reliability slider track */
     .slider { width: 100%; height: 5px; background: linear-gradient(to right, #ff4d4d, #ffcc00, #66cc66); outline: none; -webkit-appearance: none; border-radius: 5px; }
     .slider::-webkit-slider-thumb { -webkit-appearance: none; width: 18px; height: 18px; background: #fff; border: 2px solid var(--primary-color); border-radius: 50%; cursor: pointer; }
     .slider-labels { display: flex; justify-content: space-between; margin-top: 6px; font-size: 12px; color: #666; }
@@ -114,7 +114,7 @@
       padding: 10px 14px; margin-bottom: 14px; font-size: 13px; color: #666;
     }
     .pill { display: inline-flex; align-items: center; gap: 8px; background: var(--light-gray); border-radius: 999px; padding: 6px 10px; font-weight: 500; }
-    .dot { width: 8px; height: 8px; border-radius: 50%; background: var(--primary-color); animation: pulse 1.8s ease-in-out infinite; }
+    .dot { width: 8px; height: 8px; border-radius: 50%; background: #3478F6; animation: pulse 1.8s ease-in-out infinite; }
     @keyframes pulse { 0%{transform:scale(1);opacity:.8} 50%{transform:scale(1.25);opacity:1} 100%{transform:scale(1);opacity:.8} }
     @media (prefers-reduced-motion: reduce) { .dot { animation: none; } }
 
@@ -139,31 +139,20 @@
     .source-info { flex: 1; min-width: 0; }
     .source-name { font-weight: 600; font-size: 14px; }
     .source-meta { display: flex; gap: 8px; flex-wrap: wrap; color: #777; font-size: 12px; margin-top: 2px; }
-    ./* Reliability badge – 3 tiers */
-.reliability-badge {
-  padding: 2px 8px;
-  border-radius: 999px;
-  font-size: 12px;
-  font-weight: 600;
-}
 
-/* > 50 → Yellow */
-.reliability--over {
-  background: #fff6b3;  /* soft yellow */
-  color: #7a6700;
-}
-
-/* = 50 (default) → Green */
-.reliability--default {
-  background: #e6f7e6;  /* soft green */
-  color: #1b7f3a;
-}
-
-/* < 50 → Violet */
-.reliability--under {
-  background: #efe6ff;  /* soft violet */
-  color: #5b3aa3;
-}
+    /* Reliability badge – 3 tiers */
+    .reliability-badge {
+      padding: 2px 8px;
+      border-radius: 999px;
+      font-size: 12px;
+      font-weight: 600;
+    }
+    /* > 50 → Yellow */
+    .reliability--over { background: #fff6b3; color: #7a6700; }
+    /* = 50 → Green (default) */
+    .reliability--default { background: #e6f7e6; color: #1b7f3a; }
+    /* < 50 → Violet */
+    .reliability--under { background: #efe6ff; color: #5b3aa3; }
 
     .bias-badge { background: #f2f3f4; color: #444; padding: 2px 8px; border-radius: 999px; font-size: 12px; font-weight: 600; }
     .bias-badge.left{background:#e7f3fb;color:#2E4172}
@@ -526,12 +515,11 @@
         const img = article?.image || '';
         const url = article?.url || '#';
 
-        // reliability score & class
-const rawScore = (typeof article?.reliabilityScore === 'number') ? article.reliabilityScore : 50;
-const score = Math.round(rawScore);
-const relClass = score > 50 ? 'reliability--over' : (score < 50 ? 'reliability--under' : 'reliability--default');
-const reliabilityText = `Reliability ${score}`;
-
+        // reliability score & class (3-tier)
+        const rawScore = (typeof article?.reliabilityScore === 'number') ? article.reliabilityScore : 50;
+        const score = Math.round(rawScore);
+        const relClass = score > 50 ? 'reliability--over' : (score < 50 ? 'reliability--under' : 'reliability--default');
+        const reliabilityText = `Reliability ${score}`;
 
         const detected = (article.bias || '').trim();
         const biasLabelMap = { 'left':'Left','lean-left':'Center Left','center':'Center','lean-right':'Center Right','right':'Right' };
@@ -545,7 +533,7 @@ const reliabilityText = `Reliability ${score}`;
               <div class="source-info">
                 <div class="source-name">${this.escape(srcName)}</div>
                 <div class="source-meta">
-                  <span class="reliability-badge">${this.escape(reliabilityText)}</span>
+                  <span class="reliability-badge ${this.escape(relClass)}">${this.escape(reliabilityText)}</span>
                   <span class="bias-badge ${this.escape(biasClass)}">${this.escape(biasLabel)}</span>
                 </div>
               </div>
@@ -562,8 +550,6 @@ const reliabilityText = `Reliability ${score}`;
               <div class="article-meta">
                 <span>${this.escape(dateText)}</span>
                 <span>${this.escape(new URL(url, location.href).hostname || '')}</span>
-                <span class="reliability-badge ${this.escape(relClass)}">${this.escape(reliabilityText)}</span>
-
               </div>
               <p class="article-description">${this.escape(desc)}</p>
               <div class="article-actions">
